--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -2,16 +2,19 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:mask="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="fragmentBookmarkVM"
             type="dm.sime.com.kharetati.view.viewModels.BookmarkViewModel" />
     </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        android:background="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,13 +29,13 @@
                 android:layout_height="72dp"
                 android:layout_marginTop="4dp"
                 android:orientation="horizontal"
-                android:weightSum="1">
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight=".30"
                     android:layout_gravity="center"
+                    android:weightSum="4"
                     android:background="@drawable/favourites_search_bg">
 
                     <!--<ImageButton-->
@@ -46,113 +49,146 @@
 
                     <TextView
                         android:id="@+id/textView27"
-                        android:layout_width="90dp"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
                         android:layout_marginStart="5dp"
                         android:layout_weight=".05"
-                        android:paddingStart="10dp"
+
                         android:focusableInTouchMode="false"
                         android:fontFamily="@font/dubai_font"
                         android:gravity="start|center_vertical"
-                        android:layout_gravity="center_vertical"
-                        android:singleLine="false"
                         android:maxLines="2"
+                        android:paddingStart="10dp"
+                        android:singleLine="false"
                         android:text="@string/findPlot"
                         android:textAlignment="viewStart"
-                        android:textColor="@android:color/black"
+                        android:textColor="#333333"
                         android:textSize="14sp" />
 
                     <AutoCompleteTextView
                         android:id="@+id/fragment_bookmarks_plotnumber"
-                        android:layout_width="90dp"
+                        android:layout_width="180dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.35"
+                        android:layout_weight=".05"
                         android:background="#00000000"
                         android:digits="0123456789"
-                        android:fontFamily="@font/dubai_font"
-                        android:hint="-  -  -  -  -  -  -"
-                        android:inputType="number"
-                        android:ems="8"
 
+                        android:ems="8"
+                        android:fontFamily="@font/dubai_font"
+                        android:hint="_   _   _   _   _   _   _"
+                        android:textColorHint="#333333"
+                        android:inputType="number"
+
+                        android:lineHeight="20dp"
                         android:maxLength="12"
                         android:paddingStart="5dp"
+                        android:layout_gravity="bottom"
+
                         android:paddingEnd="5dp"
-                        android:lineHeight="20dp"
                         android:textAlignment="viewStart"
                         android:textDirection="ltr"
                         android:textSize="14sp" />
 
                     <LinearLayout
                         android:id="@+id/fragment_bookmarks_btnSearch"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
                         android:layout_gravity="center"
-                        android:layout_marginEnd="5dp"
-                        android:layout_weight=".10">
+                        android:layout_weight="0.01"
+                        android:layout_marginEnd="5dp">
 
                         <ImageView
 
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:padding="10dp"
                             android:layout_marginEnd="5dp"
+                            android:padding="10dp"
                             android:src="@drawable/search_512" />
 
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="#80333333" />
+
+                    <LinearLayout
+                        android:id="@+id/mapMenu"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="5dp"
+                        android:layout_weight="3.89">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:padding="8dp"
+                            android:src="@drawable/map_menu_512" />
+
+
+                        <!--android:imeOptions="actionDone"
+                        android:inputType="text"-->
+                        <!-- android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"-->
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="end"
+                android:layout_marginTop="-8dp"
+                android:id="@+id/sortLayout"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:id="@+id/sortDescending"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp"
+
+                    android:background="@drawable/rounded_corners_bg">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:padding="11dp"
+                        android:src="@drawable/sort_descending" />
+
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/sortAscending"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_gravity="center"
-                    android:layout_weight=".70"
-                    android:layout_marginStart="0dp"
-                    android:gravity="end">
 
-                    <LinearLayout
-                        android:id="@+id/sortDescending"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@drawable/rounded_corners_bg">
+
+                    <ImageView
+
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
 
-                        android:background="@drawable/rounded_corners_bg">
+                        android:padding="11dp"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/sort_ascending" />
 
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:padding="11dp"
-                            android:src="@drawable/sort_descending" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/sortAscending"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-
-                        android:layout_marginStart="8dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@drawable/rounded_corners_bg">
-
-                        <ImageView
-
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-
-                            android:padding="11dp"
-                            android:scaleType="fitXY"
-                            android:src="@drawable/sort_ascending" />
-
-                    </LinearLayout>
                 </LinearLayout>
-
-
             </LinearLayout>
 
             <TextView
