--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#940e2a</color>
+    <color name="colorPrimaryDark">#a31533</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
 
     <color name="transparent">#00000000</color>
     <color name="textColor">#333333</color>
+    <color name="favoritesTextColor">#262424</color>
 
 
     <!-- dots active colors -->
