--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                         android:layout_width="24dp"
                         android:layout_height="48dp"
                         android:paddingStart="3dp"
-                        android:layout_marginTop="26dp"
+                        android:layout_marginTop="24dp"
                         android:id="@+id/backButton"
                         android:visibility="visible"
                         android:src="@drawable/back"/>
@@ -42,12 +42,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start|center_vertical"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="14dp"
                         android:layout_marginEnd="10dp"
                         android:fontFamily="@font/dubai_font"
                         android:gravity="start|center_vertical"
                         android:paddingBottom="4dp"
                         android:text="@string/title_welcome"
+
                         android:textAlignment="viewStart"
                         android:textColor="@color/white"
                         android:textFontWeight="1000"
@@ -83,9 +84,10 @@
                         android:id="@+id/imgRound"
                         android:layout_marginStart="25dp"
                         android:gravity="center_vertical"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="18dp"
+                        android:layout_marginBottom="18dp"
                         android:layout_marginEnd="10dp"
+                        android:padding="2dp"
                         android:layout_gravity="center_vertical"
                         android:src="@drawable/user_profile"/>
                     <LinearLayout
