--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -55,7 +55,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight=".15"
+                    android:weightSum="2"
                     android:orientation="horizontal">
 
                     <ImageView
@@ -75,40 +76,56 @@
 
                     <dm.sime.com.kharetati.view.customview.CleanableEditText
                         android:id="@+id/txtPlotNo"
-                        android:layout_width="105dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginVertical="2dp"
                         android:background="@color/white"
                         android:gravity="center_vertical|center_horizontal"
-                        android:hint="-  -  -  -  -  -  -"
+                        android:hint="-    -    -    -    -    -    -"
+                        android:textColorHint="#9E9E9E"
+                        android:layout_weight="2"
                         android:maxLength="20"
+
                         android:textSize="16sp" />
+                    <ImageView
+                        android:id="@+id/imgSearch"
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:padding="8dp"
+                        android:layout_weight="0.7"
+                        android:layout_gravity="start|center_vertical"
+                        android:src="@drawable/search_512" />
+                    <LinearLayout
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:background="#80333333"/>
 
                     <!--android:imeOptions="actionDone"
                     android:inputType="text"-->
                    <!-- android:digits="0123456789١٢٣٤٥٦٧٨٩١٠"-->
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/mapMenu"
+                    android:layout_weight="1.50">
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="8dp"
+                        android:src="@drawable/map_menu_512"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight=".65"
+                    android:visibility="gone"
 
                     android:orientation="horizontal"
                     android:weightSum="6">
 
-                    <ImageView
-                        android:id="@+id/imgSearch"
-                        android:layout_width="50dp"
-                        android:layout_height="match_parent"
-                        android:layout_margin="8dp"
-                        android:layout_gravity="start|center_vertical"
-                        android:layout_weight="1"
-                        android:src="@drawable/search_512" />
-                    <LinearLayout
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="#80333333"/>
+
                     <ImageView
                         android:id="@+id/imgLayer"
                         android:layout_width="50dp"
@@ -135,7 +152,8 @@
                         android:layout_width="1dp"
                         android:id="@+id/bookmarkview"
                         android:layout_height="match_parent"
-                        android:background="#80333333"/>
+                        android:background="#80333333"
+                        android:orientation="horizontal" />
                     <ImageView
                         android:id="@+id/imgRecenter"
                         android:layout_width="50dp"
@@ -176,7 +194,7 @@
 
         <ListView
             android:id="@+id/fragment_map_searchhistory"
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginTop="50dp"
@@ -189,6 +207,24 @@
             app:layout_constraintEnd_toEndOf="parent"
 
 
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolBarLayout" />
+        <ListView
+            android:id="@+id/listmap_menu"
+            android:layout_width="210dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginTop="65dp"
+            android:backgroundTint="@color/white"
+            android:divider="#CCCCCC"
+            android:dividerHeight="1dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="12dp"
+            android:layout_gravity="end"
+            android:background="@color/white"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBarLayout" />
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -221,7 +257,7 @@
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:padding="6dp"
+                android:padding="7dp"
                 android:src="@drawable/close_512"
                 android:layout_gravity="center"/>
         </FrameLayout>
