--- a/app/src/main/res/layout/more_layout_item.xml
+++ b/app/src/main/res/layout/more_layout_item.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginVertical="10dp">
         <LinearLayout
             android:layout_width="85dp"
@@ -24,6 +24,7 @@
                 app:srcCompat="@drawable/ic_help_black"
                 android:gravity="center"
                 android:scaleType="fitXY"
+                android:padding="5dp"
                 android:layout_gravity="center"
                 android:layout_margin="15dp"/>
         </LinearLayout>
@@ -33,8 +34,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#222222"
-            android:singleLine="true"
-
+            android:singleLine="false"
+            android:textSize="14sp"
+            android:lineHeight="20dp"
+            android:textStyle="bold"
+            android:maxLines="2"
+            android:textFontWeight="1000"
             android:layout_marginTop="7dp"
             android:textAlignment="center"
             android:gravity="center_horizontal|center_vertical"/>
